Replace var with type declarations, because we give a shit about being able to read code. Remove external file loader, force datapack/resourcepack method only.