@@ -2,6 +2,8 @@ package guidebook.client.book.gui;
 
 import java.util.List;
 
+import org.jetbrains.annotations.NotNull;
+
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
 import net.minecraft.client.gui.GuiGraphics;
@@ -33,24 +35,31 @@ public class BookTextRenderer implements Renderable {
 
     public BookTextRenderer(GuiBook gui, Component text, int x, int y, int width, int lineHeight, int baseColor) {
         this.book = gui.book;
+
         Style baseStyle = book.getFontStyle().withColor(TextColor.fromRgb(baseColor));
+        GuidebookConfig.TextOverflowMode overflowMode = this.book.overflowMode;
 
         this.parser = new BookTextParser(gui, this.book, x, y, width, lineHeight, baseStyle);
-        var overflowMode = this.book.overflowMode;
+
         if (overflowMode == null) {
             overflowMode = GuidebookConfig.Client.overflowMode();
         }
+
         this.layouter = new TextLayouter(gui, x, y, lineHeight, width, overflowMode);
+
         setText(text);
     }
 
     void setText(Component text) {
         Component text1;
-        if (this.book.i18n && text.getContents() instanceof PlainTextContents.LiteralContents lc) {
-            text1 = Component.literal(I18n.get(lc.text()));
-        } else {
+
+        if (this.book.i18n && text.getContents() instanceof PlainTextContents.LiteralContents(String text2)) {
+            text1 = Component.literal(I18n.get(text2));
+        }
+        else {
             text1 = text;
         }
+
         this.layouter.layout(Minecraft.getInstance().font, this.parser.parse(text1));
         this.scale = this.layouter.getScale();
         this.words = this.layouter.getWords();
@@ -61,11 +70,11 @@ public class BookTextRenderer implements Renderable {
     }
 
     @Override
-    public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTicks) {
+    public void render(@NotNull GuiGraphics graphics, int mouseX, int mouseY, float partialTicks) {
         if (!words.isEmpty()) {
             Font font = Minecraft.getInstance().font;
             Style style = book.getFontStyle();
-            Word first = words.get(0);
+            Word first = words.getFirst();
             graphics.pose().pushPose();
             graphics.pose().translate(first.x, first.y, 0);
             graphics.pose().scale(scale, scale, 1.0f);
@@ -79,7 +88,8 @@ public class BookTextRenderer implements Renderable {
 
     public boolean click(double mouseX, double mouseY, int mouseButton) {
         if (!words.isEmpty()) {
-            Word first = words.get(0);
+            Word first = words.getFirst();
+
             double scaledX = rescale(mouseX, first.x);
             double scaledY = rescale(mouseY, first.y);
             for (Word word : words) {
