@@ -12,6 +12,7 @@ import guidebook.client.base.PersistentData;
 import guidebook.client.book.gui.GuiBook;
 
 public class GuiButtonBookResize extends GuiButtonBook {
+
 	public GuiButtonBookResize(GuiBook parent, int x, int y, Button.OnPress onPress) {
 		super(parent, x, y, 330, 9, 11, 11, onPress,
 				Component.translatable("guidebook.gui.lexicon.button.resize"));
@@ -19,7 +20,7 @@ public class GuiButtonBookResize extends GuiButtonBook {
 
 	@Override
 	public List<Component> getTooltipLines() {
-		var size = PersistentData.data.bookGuiScale;
+        int size = PersistentData.data.bookGuiScale;
 		// The last size with a dedicated message. For sizes 6 and above, we display
 		// verybig.message, wrapped in (scale - 5) iterations of verybig.container
 		final int lastSize = 5;
@@ -30,12 +31,13 @@ public class GuiButtonBookResize extends GuiButtonBook {
 		}
         else {
 			sizeMsg = Component.translatable("guidebook.gui.lexicon.button.resize.verybig.message");
+
 			for (int i = 0; i < size - lastSize; i++) {
 				sizeMsg = Component.translatable("guidebook.gui.lexicon.button.resize.verybig.container", sizeMsg);
 			}
 		}
 
-		return Arrays.asList(tooltip.get(0), sizeMsg.withStyle(ChatFormatting.GRAY));
+		return Arrays.asList(tooltip.getFirst(), sizeMsg.withStyle(ChatFormatting.GRAY));
 	}
 
 }
